<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.siddhBhadani.FileStorageDemo.Files_with_data_directory.FileWithDataDirectory">

    <EditText
        android:id="@+id/etContentForFileDataDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:hint="@string/enter_content_to_be_added_to_the_file"
        android:isScrollContainer="true"
        android:minLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnWriteToFileDataDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/write_to_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContentForFileDataDir" />

    <Button
        android:id="@+id/btnReadFromFileDataDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Read from File"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWriteToFileDataDir" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReadFromFileDataDir">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContentsOfFileDataDir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollIndicators="end"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/the_file_details_and_content_goes_here_dafadfdsf_sdfsd_fsd_fsd_f_sdf_sd_fsd_f_sd_f_sdf_sd_f_sdf_sd_fsd_fsd_fsd_f_sd_fsd_f_sd_f_sd_fds_f_ds_f_sd_f_sd_fsd_f_ds_f_ds_f_sd_f_sd_f_sd_f_d_s_f_sd_f_s_d_f_sd_f_ds_f_sd_f_sd_f_sd_xxcxxcxcxc_xcxcxcxcxcxcx" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>